# models/customer.go
@@ -1,0 +1,12 @@
+package models
+
+import "time"
+
+type Customer struct {
+	ID        uint      `gorm:"primaryKey" json:"id"`
+	Name      string    `gorm:"not null" json:"name" binding:"required"`
+	Phone     string    `json:"phone"`
+	Email     string    `json:"email" binding:"omitempty,email"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+}
